// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Molecules/Accordion passes the snapshot test with allowMultiple prop 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    style={
      {
        "flexDirection": "column",
        "flexWrap": "nowrap",
      }
    }
    transition={
      {
        "dampingRatio": 1,
        "duration": 100,
        "type": "spring",
      }
    }
  >
    <View
      animate={
        {
          "borderBottomWidth": 1,
          "borderColor": "#E4E9F2",
          "marginBottom": 0,
          "paddingHorizontal": 4,
          "paddingVertical": 12,
          "width": "100%",
        }
      }
      animatedStyle={
        {
          "value": {
            "borderBottomWidth": 1,
            "borderColor": "#E4E9F2",
            "marginBottom": 0,
            "paddingHorizontal": 4,
            "paddingVertical": 12,
            "width": "100%",
          },
        }
      }
      collapsable={false}
      style={
        {
          "borderBottomWidth": 1,
          "borderColor": "#E4E9F2",
          "flexDirection": "column",
          "flexWrap": "nowrap",
          "marginBottom": 0,
          "paddingHorizontal": 4,
          "paddingVertical": 12,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-start",
            "width": "100%",
          }
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "width": "100%",
              },
            }
          }
          collapsable={false}
          state={
            {
              "__state": {
                "_isReanimatedSharedValue": true,
                "_value": {
                  "width": "100%",
                },
                "addListener": [Function],
                "modify": [Function],
                "removeListener": [Function],
                "value": {
                  "width": "100%",
                },
              },
            }
          }
          style={
            {
              "width": "100%",
            }
          }
          transition={
            {
              "duration": 50,
            }
          }
        >
          <View
            animate={
              {
                "alignItems": "center",
                "justifyContent": "space-between",
              }
            }
            animatedStyle={
              {
                "value": {
                  "alignItems": "center",
                  "justifyContent": "space-between",
                },
              }
            }
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityRole="text"
              accessible={true}
              allowFontScaling={true}
              animate={
                {
                  "color": "#1A2138",
                }
              }
              animatedStyle={
                {
                  "value": {
                    "color": "#1A2138",
                  },
                }
              }
              collapsable={false}
              style={
                {
                  "color": "#1A2138",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16.099999999999998,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "includeFontPadding": false,
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Test
            </Text>
            <Text
              accessibilityLabel="chevron-down Icon"
              accessible={true}
              allowFontScaling={false}
              animate={
                {
                  "color": "#1A2138",
                }
              }
              animatedStyle={
                {
                  "value": {
                    "color": "#1A2138",
                  },
                }
              }
              collapsable={false}
              selectable={false}
              style={
                [
                  {
                    "color": undefined,
                    "fontSize": 13.799999999999999,
                  },
                  {
                    "color": "#1A2138",
                  },
                  {
                    "fontFamily": "feather",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      animate={
        {
          "borderBottomWidth": 1,
          "borderColor": "#E4E9F2",
          "paddingHorizontal": 4,
          "paddingVertical": 12,
          "width": "100%",
        }
      }
      animatedStyle={
        {
          "value": {
            "borderBottomWidth": 1,
            "borderColor": "#E4E9F2",
            "paddingHorizontal": 4,
            "paddingVertical": 12,
            "width": "100%",
          },
        }
      }
      collapsable={false}
      style={
        {
          "borderBottomWidth": 1,
          "borderColor": "#E4E9F2",
          "flexDirection": "column",
          "flexWrap": "nowrap",
          "paddingHorizontal": 4,
          "paddingVertical": 12,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-start",
            "width": "100%",
          }
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "width": "100%",
              },
            }
          }
          collapsable={false}
          state={
            {
              "__state": {
                "_isReanimatedSharedValue": true,
                "_value": {
                  "width": "100%",
                },
                "addListener": [Function],
                "modify": [Function],
                "removeListener": [Function],
                "value": {
                  "width": "100%",
                },
              },
            }
          }
          style={
            {
              "width": "100%",
            }
          }
          transition={
            {
              "duration": 50,
            }
          }
        >
          <View
            animate={
              {
                "alignItems": "center",
                "justifyContent": "space-between",
              }
            }
            animatedStyle={
              {
                "value": {
                  "alignItems": "center",
                  "justifyContent": "space-between",
                },
              }
            }
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityRole="text"
              accessible={true}
              allowFontScaling={true}
              animate={
                {
                  "color": "#1A2138",
                }
              }
              animatedStyle={
                {
                  "value": {
                    "color": "#1A2138",
                  },
                }
              }
              collapsable={false}
              style={
                {
                  "color": "#1A2138",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16.099999999999998,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "includeFontPadding": false,
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Test
            </Text>
            <Text
              accessibilityLabel="chevron-down Icon"
              accessible={true}
              allowFontScaling={false}
              animate={
                {
                  "color": "#1A2138",
                }
              }
              animatedStyle={
                {
                  "value": {
                    "color": "#1A2138",
                  },
                }
              }
              collapsable={false}
              selectable={false}
              style={
                [
                  {
                    "color": undefined,
                    "fontSize": 13.799999999999999,
                  },
                  {
                    "color": "#1A2138",
                  },
                  {
                    "fontFamily": "feather",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Molecules/Accordion passes the snapshot test with allowToggle prop 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    style={
      {
        "flexDirection": "column",
        "flexWrap": "nowrap",
      }
    }
    transition={
      {
        "dampingRatio": 1,
        "duration": 100,
        "type": "spring",
      }
    }
  >
    <View
      animate={
        {
          "borderBottomWidth": 1,
          "borderColor": "#E4E9F2",
          "paddingHorizontal": 4,
          "paddingVertical": 12,
          "width": "100%",
        }
      }
      animatedStyle={
        {
          "value": {
            "borderBottomWidth": 1,
            "borderColor": "#E4E9F2",
            "paddingHorizontal": 4,
            "paddingVertical": 12,
            "width": "100%",
          },
        }
      }
      collapsable={false}
      style={
        {
          "borderBottomWidth": 1,
          "borderColor": "#E4E9F2",
          "flexDirection": "column",
          "flexWrap": "nowrap",
          "paddingHorizontal": 4,
          "paddingVertical": 12,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-start",
            "width": "100%",
          }
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "width": "100%",
              },
            }
          }
          collapsable={false}
          state={
            {
              "__state": {
                "_isReanimatedSharedValue": true,
                "_value": {
                  "width": "100%",
                },
                "addListener": [Function],
                "modify": [Function],
                "removeListener": [Function],
                "value": {
                  "width": "100%",
                },
              },
            }
          }
          style={
            {
              "width": "100%",
            }
          }
          transition={
            {
              "duration": 50,
            }
          }
        >
          <View
            animate={
              {
                "alignItems": "center",
                "justifyContent": "space-between",
              }
            }
            animatedStyle={
              {
                "value": {
                  "alignItems": "center",
                  "justifyContent": "space-between",
                },
              }
            }
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityRole="text"
              accessible={true}
              allowFontScaling={true}
              animate={
                {
                  "color": "#1A2138",
                }
              }
              animatedStyle={
                {
                  "value": {
                    "color": "#1A2138",
                  },
                }
              }
              collapsable={false}
              style={
                {
                  "color": "#1A2138",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16.099999999999998,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "includeFontPadding": false,
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Test
            </Text>
            <Text
              accessibilityLabel="chevron-down Icon"
              accessible={true}
              allowFontScaling={false}
              animate={
                {
                  "color": "#1A2138",
                }
              }
              animatedStyle={
                {
                  "value": {
                    "color": "#1A2138",
                  },
                }
              }
              collapsable={false}
              selectable={false}
              style={
                [
                  {
                    "color": undefined,
                    "fontSize": 13.799999999999999,
                  },
                  {
                    "color": "#1A2138",
                  },
                  {
                    "fontFamily": "feather",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Molecules/Accordion passes the snapshot test with default props 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    style={
      {
        "flexDirection": "column",
        "flexWrap": "nowrap",
      }
    }
    transition={
      {
        "dampingRatio": 1,
        "duration": 100,
        "type": "spring",
      }
    }
  >
    <View
      animate={
        {
          "borderBottomWidth": 1,
          "borderColor": "#E4E9F2",
          "paddingHorizontal": 4,
          "paddingVertical": 12,
          "width": "100%",
        }
      }
      animatedStyle={
        {
          "value": {
            "borderBottomWidth": 1,
            "borderColor": "#E4E9F2",
            "paddingHorizontal": 4,
            "paddingVertical": 12,
            "width": "100%",
          },
        }
      }
      collapsable={false}
      style={
        {
          "borderBottomWidth": 1,
          "borderColor": "#E4E9F2",
          "flexDirection": "column",
          "flexWrap": "nowrap",
          "paddingHorizontal": 4,
          "paddingVertical": 12,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-start",
            "width": "100%",
          }
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "width": "100%",
              },
            }
          }
          collapsable={false}
          state={
            {
              "__state": {
                "_isReanimatedSharedValue": true,
                "_value": {
                  "width": "100%",
                },
                "addListener": [Function],
                "modify": [Function],
                "removeListener": [Function],
                "value": {
                  "width": "100%",
                },
              },
            }
          }
          style={
            {
              "width": "100%",
            }
          }
          transition={
            {
              "duration": 50,
            }
          }
        >
          <View
            animate={
              {
                "alignItems": "center",
                "justifyContent": "space-between",
              }
            }
            animatedStyle={
              {
                "value": {
                  "alignItems": "center",
                  "justifyContent": "space-between",
                },
              }
            }
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityRole="text"
              accessible={true}
              allowFontScaling={true}
              animate={
                {
                  "color": "#1A2138",
                }
              }
              animatedStyle={
                {
                  "value": {
                    "color": "#1A2138",
                  },
                }
              }
              collapsable={false}
              style={
                {
                  "color": "#1A2138",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16.099999999999998,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "includeFontPadding": false,
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Test
            </Text>
            <Text />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Molecules/Accordion passes the snapshot test with multiple items 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    style={
      {
        "flexDirection": "column",
        "flexWrap": "nowrap",
      }
    }
    transition={
      {
        "dampingRatio": 1,
        "duration": 100,
        "type": "spring",
      }
    }
  >
    <View
      animate={
        {
          "borderBottomWidth": 1,
          "borderColor": "#E4E9F2",
          "marginBottom": 0,
          "paddingHorizontal": 4,
          "paddingVertical": 12,
          "width": "100%",
        }
      }
      animatedStyle={
        {
          "value": {
            "borderBottomWidth": 1,
            "borderColor": "#E4E9F2",
            "marginBottom": 0,
            "paddingHorizontal": 4,
            "paddingVertical": 12,
            "width": "100%",
          },
        }
      }
      collapsable={false}
      style={
        {
          "borderBottomWidth": 1,
          "borderColor": "#E4E9F2",
          "flexDirection": "column",
          "flexWrap": "nowrap",
          "marginBottom": 0,
          "paddingHorizontal": 4,
          "paddingVertical": 12,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-start",
            "width": "100%",
          }
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "width": "100%",
              },
            }
          }
          collapsable={false}
          state={
            {
              "__state": {
                "_isReanimatedSharedValue": true,
                "_value": {
                  "width": "100%",
                },
                "addListener": [Function],
                "modify": [Function],
                "removeListener": [Function],
                "value": {
                  "width": "100%",
                },
              },
            }
          }
          style={
            {
              "width": "100%",
            }
          }
          transition={
            {
              "duration": 50,
            }
          }
        >
          <View
            animate={
              {
                "alignItems": "center",
                "justifyContent": "space-between",
              }
            }
            animatedStyle={
              {
                "value": {
                  "alignItems": "center",
                  "justifyContent": "space-between",
                },
              }
            }
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityRole="text"
              accessible={true}
              allowFontScaling={true}
              animate={
                {
                  "color": "#1A2138",
                }
              }
              animatedStyle={
                {
                  "value": {
                    "color": "#1A2138",
                  },
                }
              }
              collapsable={false}
              style={
                {
                  "color": "#1A2138",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16.099999999999998,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "includeFontPadding": false,
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Test
            </Text>
            <Text
              accessibilityLabel="chevron-down Icon"
              accessible={true}
              allowFontScaling={false}
              animate={
                {
                  "color": "#1A2138",
                }
              }
              animatedStyle={
                {
                  "value": {
                    "color": "#1A2138",
                  },
                }
              }
              collapsable={false}
              selectable={false}
              style={
                [
                  {
                    "color": undefined,
                    "fontSize": 13.799999999999999,
                  },
                  {
                    "color": "#1A2138",
                  },
                  {
                    "fontFamily": "feather",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      animate={
        {
          "borderBottomWidth": 1,
          "borderColor": "#E4E9F2",
          "paddingHorizontal": 4,
          "paddingVertical": 12,
          "width": "100%",
        }
      }
      animatedStyle={
        {
          "value": {
            "borderBottomWidth": 1,
            "borderColor": "#E4E9F2",
            "paddingHorizontal": 4,
            "paddingVertical": 12,
            "width": "100%",
          },
        }
      }
      collapsable={false}
      style={
        {
          "borderBottomWidth": 1,
          "borderColor": "#E4E9F2",
          "flexDirection": "column",
          "flexWrap": "nowrap",
          "paddingHorizontal": 4,
          "paddingVertical": 12,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-start",
            "width": "100%",
          }
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "width": "100%",
              },
            }
          }
          collapsable={false}
          state={
            {
              "__state": {
                "_isReanimatedSharedValue": true,
                "_value": {
                  "width": "100%",
                },
                "addListener": [Function],
                "modify": [Function],
                "removeListener": [Function],
                "value": {
                  "width": "100%",
                },
              },
            }
          }
          style={
            {
              "width": "100%",
            }
          }
          transition={
            {
              "duration": 50,
            }
          }
        >
          <View
            animate={
              {
                "alignItems": "center",
                "justifyContent": "space-between",
              }
            }
            animatedStyle={
              {
                "value": {
                  "alignItems": "center",
                  "justifyContent": "space-between",
                },
              }
            }
            collapsable={false}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              accessibilityRole="text"
              accessible={true}
              allowFontScaling={true}
              animate={
                {
                  "color": "#1A2138",
                }
              }
              animatedStyle={
                {
                  "value": {
                    "color": "#1A2138",
                  },
                }
              }
              collapsable={false}
              style={
                {
                  "color": "#1A2138",
                  "fontFamily": "Poppins-Regular",
                  "fontSize": 16.099999999999998,
                  "fontStyle": "normal",
                  "fontWeight": "400",
                  "includeFontPadding": false,
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Test
            </Text>
            <Text
              accessibilityLabel="chevron-down Icon"
              accessible={true}
              allowFontScaling={false}
              animate={
                {
                  "color": "#1A2138",
                }
              }
              animatedStyle={
                {
                  "value": {
                    "color": "#1A2138",
                  },
                }
              }
              collapsable={false}
              selectable={false}
              style={
                [
                  {
                    "color": undefined,
                    "fontSize": 13.799999999999999,
                  },
                  {
                    "color": "#1A2138",
                  },
                  {
                    "fontFamily": "feather",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
